@@ -1,3 +1,7 @@
+2002-02-27  Ken Raeburn  <raeburn@mit.edu>
+
+	* fieldbits.h: Deleted.
+
 2002-02-10  Ken Raeburn  <raeburn@mit.edu>
 
 	* defines.h: Include fake-addrinfo.h.
